--- a/src/He.PipelineAssessment.Data.Tests/He.PipelineAssessment.Data.Tests.csproj
+++ b/src/He.PipelineAssessment.Data.Tests/He.PipelineAssessment.Data.Tests.csproj
@@ -16,6 +16,10 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
 	  <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
 	  <PackageReference Include="xunit" Version="2.4.1" />
