WIP to re-route to elsa host page

--- a/src/Elsa.Dashboard/Elsa.Dashboard.csproj
+++ b/src/Elsa.Dashboard/Elsa.Dashboard.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Elsa.Designer.Components.Web" Version="2.9.3" />
+    <PackageReference Include="He.Cookies.Mvc" Version="1.0.36" />
+    <PackageReference Include="He.Identity" Version="1.0.58" />
+    <PackageReference Include="He.Identity.Auth0" Version="1.0.58" />
+    <PackageReference Include="He.Identity.Mvc" Version="1.0.58" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
