--- a/src/He.PipelineAssessment.UI/appsettings.json
+++ b/src/He.PipelineAssessment.UI/appsettings.json
@@ -23,5 +23,12 @@
   },
   "IdentityClientConfig": {
 
+  },
+  "Auth0Config": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "Domain": "",
+    "Identifier": "",
+    "SupportEmail": ""
   }
 }
