--- a/src/He.PipelineAssessment.UI/appsettings.json
+++ b/src/He.PipelineAssessment.UI/appsettings.json
@@ -19,16 +19,18 @@
     "UseSeedData": false
   },
   "Datasources": {
-    "SinglePipeline": ""
+    "SinglePipeline": "-"
   },
   "IdentityClientConfig": {
-
+    "ApplicationManagedIdentity": "-",
+    "AzureTenantId": "-",
+    "AzureResourceId": "-"
   },
   "Auth0Config": {
-    "ClientId": "",
-    "ClientSecret": "",
-    "Domain": "",
-    "Identifier": "",
-    "SupportEmail": ""
+    "ClientId": "-",
+    "ClientSecret": "-",
+    "Domain": "-",
+    "Identifier": "-",
+    "SupportEmail": "-"
   }
 }
