--- a/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
+++ b/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
@@ -7,21 +7,21 @@ trigger:
   - none
 
 variables:
-  tag: '$(Build.BuildNumber)'
+  tag: "$(Build.BuildNumber)"
 
 pool:
-  vmImage: 'ubuntu-22.04'
+  vmImage: "ubuntu-22.04"
 
 resources:
   repositories:
-  - repository: pipeline-assessment-deployment
-    type: git
-    name: 'Pipeline Assessment/pipeline-assessment-deployment'   
-    ref: 'main'
-  - repository: templates
-    type: git
-    name: 'Pipeline Assessment/Templates'   
-    ref: 'master'
+    - repository: pipeline-assessment-deployment
+      type: git
+      name: "Pipeline Assessment/pipeline-assessment-deployment"
+      ref: "feature/shared-helm-library"
+    - repository: templates
+      type: git
+      name: "Pipeline Assessment/Templates"
+      ref: "master"
 
 stages:
-- template: azure-pipelines-build-and-deploy.yml@pipeline-assessment-deployment
+  - template: azure-pipelines-build-and-deploy.yml@pipeline-assessment-deployment
