--- a/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
+++ b/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
@@ -20,7 +20,7 @@ resources:
       ref: "feature/shared-helm-library"
     - repository: templates
       type: git
-      name: "Pipeline Assessment/Templates"
+      name: "Cloud Hosting Service/Templates"
       ref: "master"
 
 stages:
