--- a/src/He.PipelineAssessment.UI/azure-pipelines-build.yml
+++ b/src/He.PipelineAssessment.UI/azure-pipelines-build.yml
@@ -15,10 +15,14 @@ resources:
       type: git
       name: "Pipeline Assessment/pipeline-assessment-deployment"
       ref: "test/pipeline"
+    # - repository: templates
+    #   type: git
+    #   name: "Pipeline Assessment/Templates"
+    #   ref: "master"
     - repository: templates
       type: git
-      name: "Pipeline Assessment/Templates"
-      ref: "master"
+      name: "Cloud Hosting Service/Templates"
+      ref: "feature/merge-changes-from-pipasmt"
 
 stages:
   - template: azure-pipelines-build.yml@pipeline-assessment-deployment
