--- a/src/He.PipelineAssessment.UI/azure-pipelines-build.yml
+++ b/src/He.PipelineAssessment.UI/azure-pipelines-build.yml
@@ -23,6 +23,9 @@ resources:
       type: git
       name: "Cloud Hosting Service/Templates"
       ref: "feature/merge-changes-from-pipasmt"
+    - repository: original-templates
+      type: git
+      name: "Cloud Hosting Service/Templates"
 
 stages:
   - template: azure-pipelines-build.yml@pipeline-assessment-deployment
