--- a/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
+++ b/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
@@ -18,10 +18,14 @@ resources:
     type: git
     name: 'Pipeline Assessment/pipeline-assessment-deployment'   
     ref: 'main'
+#  - repository: templates
+#    type: git
+#    name: 'Pipeline Assessment/Templates'   
+#    ref: 'master'
   - repository: templates
     type: git
-    name: 'Pipeline Assessment/Templates'   
-    ref: 'master'
+    name: "Cloud Hosting Service/Templates"
+    ref: "feature/merge-changes-from-pipasmt"
 
 stages:
 - template: azure-pipelines-build-and-deploy.yml@pipeline-assessment-deployment
