--- a/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
+++ b/src/He.PipelineAssessment.UI/azure-pipelines-build-and-deploy.yml
@@ -17,7 +17,7 @@ resources:
   - repository: pipeline-assessment-deployment
     type: git
     name: 'Pipeline Assessment/pipeline-assessment-deployment'   
-    ref: 'main'
+    ref: "test/pipeline"
 #  - repository: templates
 #    type: git
 #    name: 'Pipeline Assessment/Templates'   
