updated pipelines to point at test instances of new templates

--- a/src/Elsa.Server/azure-pipelines-build-and-deploy.yml
+++ b/src/Elsa.Server/azure-pipelines-build-and-deploy.yml
@@ -17,7 +17,7 @@ resources:
   - repository: he-workflow
     type: git
     name: 'Common Components (Agile Board)/He.Workflow'   
-    ref: 'main'
+    ref: "test/pipeline"
   - repository: templates
     type: git
     name: 'Pipeline Assessment/Templates'   
