--- a/src/Elsa.Dashboard/package.json
+++ b/src/Elsa.Dashboard/package.json
@@ -29,6 +29,7 @@
     "unit-test": "jest"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.0.4",
     "@stencil/core": "^2.19.3",
     "@stencil/router": "^1.0.1",
     "@stencil/store": "^1.5.0",
