--- a/src/Elsa.Dashboard/Elsa.Dashboard.csproj
+++ b/src/Elsa.Dashboard/Elsa.Dashboard.csproj
@@ -43,6 +43,7 @@
     <None Remove="wwwroot\Scripts\Drivers\QuestionPropertyDriver.js" />
     <None Remove="wwwroot\Scripts\Drivers\TextActivityPropertyDriver.js" />
     <None Remove="wwwroot\Scripts\Plugins\CustomPlugins.js" />
+    <None Remove="wwwroot\Scripts\Plugins\Plugins.js" />
     <None Remove="src\components\custom-input-property.tsx" />
     <None Remove="src\components\custom-outcome-property.tsx" />
     <None Remove="src\components\custom_outcome_list_property.tsx" />
@@ -50,16 +51,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\auth0-spa-js.development.js" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\auth0-spa-js.development.js.map" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\auth0-spa-js.production.esm.js" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\auth0-spa-js.production.esm.js.map" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\auth0-spa-js.production.js" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\auth0-spa-js.production.js.map" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\lib\auth0-spa-js.cjs.js" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\lib\auth0-spa-js.cjs.js.map" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\LICENSE" />
-    <None Include="wwwroot\Scripts\auth0\auth0-spa-js\README.md" />
     <None Include="wwwroot\Scripts\Constants\CustomComponentTags.js" />
     <None Include="wwwroot\Scripts\Constants\CustomPropertyUiHints.js" />
     <None Include="wwwroot\Scripts\Plugins\Plugins.js" />
@@ -89,55 +80,6 @@
     <TypeScriptCompile Include="src\nested-drivers\he-switch-cases-driver.tsx" />
     <TypeScriptCompile Include="src\constants\constants.ts" />
     <TypeScriptCompile Include="src\nested-drivers\display-managers\display-manager.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\api.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\Auth0Client.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\Auth0Client.utils.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\cache\cache-localstorage.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\cache\cache-manager.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\cache\cache-memory.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\cache\index.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\cache\key-manifest.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\cache\shared.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\constants.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\errors.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\global.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\http.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\index.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\jwt.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\promise-utils.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\scope.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\storage.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\transaction-manager.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\utils.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\version.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\worker\token.worker.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\worker\worker.types.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\dist\typings\worker\worker.utils.d.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\api.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\Auth0Client.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\Auth0Client.utils.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\cache\cache-localstorage.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\cache\cache-manager.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\cache\cache-memory.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\cache\index.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\cache\key-manifest.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\cache\shared.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\constants.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\errors.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\global.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\http.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\index.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\jwt.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\promise-utils.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\scope.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\storage.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\transaction-manager.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\utils.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\version.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\worker\token.worker.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\worker\worker.types.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\worker\worker.utils.ts" />
-    <TypeScriptCompile Include="wwwroot\Scripts\auth0\auth0-spa-js\src\worker\__mocks__\token.worker.ts" />
     <TypeScriptCompile Include="wwwroot\Scripts\CustomElsa.js" />
     <TypeScriptCompile Include="wwwroot\Scripts\Drivers\ConditionalTextListPropertyDriver.js" />
     <TypeScriptCompile Include="wwwroot\Scripts\Drivers\CustomSwitchPropertyDriver.js" />
@@ -145,6 +87,7 @@
     <TypeScriptCompile Include="wwwroot\Scripts\Drivers\TextActivityPropertyDriver.js" />
     <TypeScriptCompile Include="wwwroot\Scripts\Drivers\QuestionPropertyDriver.js" />
     <TypeScriptCompile Include="wwwroot\Scripts\Plugins\CustomPlugins.js" />
+    <TypeScriptCompile Include="wwwroot\Scripts\Plugins\Plugins.js" />
     <TypeScriptCompile Include="src\components\common-properties\custom-input-property.tsx" />
     <TypeScriptCompile Include="src\components\common-properties\conditional_text_list_property.tsx" />
     <TypeScriptCompile Include="src\components\providers\question-provider\question-provider.tsx" />
