--- a/src/Elsa.Dashboard/Elsa.Dashboard.csproj
+++ b/src/Elsa.Dashboard/Elsa.Dashboard.csproj
@@ -86,4 +86,9 @@
     <TypeScriptCompile Include="src\components\providers\question-provider\question-provider.tsx" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="src\components\common-properties\nested-properties\" />
+    <Folder Include="src\functions\" />
+  </ItemGroup>
+
 </Project>
