--- a/src/Elsa.Dashboard/Elsa.Dashboard.csproj
+++ b/src/Elsa.Dashboard/Elsa.Dashboard.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Elsa.Designer.Components.Web" Version="2.9.3" />
+    <PackageReference Include="He.Cookies.Mvc" Version="1.0.36" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
@@ -58,6 +59,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Elsa.CustomInfrastructure\Elsa.CustomInfrastructure.csproj" />
     <ProjectReference Include="..\Elsa.CustomWorkflow.Sdk\Elsa.CustomWorkflow.Sdk.csproj" />
+    <ProjectReference Include="..\He.Identity\src\He.Identity.Auth0\He.Identity.Auth0.csproj" />
+    <ProjectReference Include="..\He.Identity\src\He.Identity.Mvc\He.Identity.Mvc.csproj" />
+    <ProjectReference Include="..\He.Identity\src\He.Identity\He.Identity.csproj" />
   </ItemGroup>
 
   <ItemGroup>
