--- a/src/Elsa.Dashboard/Elsa.Dashboard.csproj
+++ b/src/Elsa.Dashboard/Elsa.Dashboard.csproj
@@ -10,6 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Elsa.Designer.Components.Web" Version="2.9.3" />
+    <PackageReference Include="He.Identity" Version="1.0.61" />
+    <PackageReference Include="He.Identity.Auth0" Version="1.0.61" />
+    <PackageReference Include="He.Identity.Mvc" Version="1.0.61" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="6.0.9" />
