Initial work prototyping the HttpClients and connecting between applications.

--- a/src/Elsa.Dashboard/appsettings.json
+++ b/src/Elsa.Dashboard/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Urls": {
     "ElsaServer": "",
+    "Pipeline": "",
     "ElsaDashboardPassthrough": ""
   },
   "ConnectionStrings": {
