--- a/src/Elsa.CustomActivities/Elsa.CustomActivities.csproj
+++ b/src/Elsa.CustomActivities/Elsa.CustomActivities.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Elsa.Client" Version="2.12.0" />
     <PackageReference Include="Elsa.Core" Version="2.12.0" />
     <PackageReference Include="Elsa.Server.Api" Version="2.9.3" />
+    <PackageReference Include="Google.Protobuf" Version="3.20.1" />
   </ItemGroup>
 
   <ItemGroup>
