Work on initial calls between Pipeline UI and Dashboard for Passing in the Workflows.

--- a/src/Elsa.Dashboard/appsettings.json
+++ b/src/Elsa.Dashboard/appsettings.json
@@ -24,5 +24,11 @@
     "MachineToMachineClientSecret": "replace-me",
     "Audience": "replace-me",
     "Authority": "replace-me"
+  },
+  "PipelineAuth0Config": {
+    "Domain": "replace-me",
+    "MachineToMachineClientId": "replace-me",
+    "MachineToMachineClientSecret": "replace-me",
+    "Audience": "replace-me"
   }
 }
