--- a/src/He.PipelineAssessment.UI/appsettings.json
+++ b/src/He.PipelineAssessment.UI/appsettings.json
@@ -37,7 +37,8 @@
     "SupportEmail": "replace-me",
     "MachineToMachineClientId": "replace-me",
     "MachineToMachineClientSecret": "replace-me",
-    "Audience": "replace-me"
+    "Audience": "replace-me",
+    "APIAudience":  "replace-me"
   },
   "Environment": {
     "EnableTestSummaryPage":  false
