Temprorary turn off cache

--- a/src/Elsa.Server/appsettings.json
+++ b/src/Elsa.Server/appsettings.json
@@ -49,7 +49,7 @@
     "SslCertificateKeyPath": "replace-me",
     "Configuration": "",
     "ClearCache": "false",
-    "UseCache":  "true"
+    "UseCache": "false"
   },
   "Elsa": {
     "ServerPrefix": "/elsa-server"
